# rc-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.txt  LOG.md  NOTE.md  README-j.md  README.md  build.rs
.github/workflows/: rust.yml
src/: env.rs  lexer.rs  lib.rs  main.rs  parser.rs  readline.rs  run_test.rs  script.rs  units.rs
tests/: _rc_rc  _rc_rc_history  cargo_run_test.answer  cli.rs  demo.answer  demo.case  run_test.sh  test.answer  test.case  test.txt
