[package]
name = "rc"
version = "0.1.5"
authors = ["kondou nobuhiro <kondou.nobuhiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
crossterm = "0.18.2"
dirs = "3.0.1"
thiserror = "1.0.23"
# anyhow = "1.0.36"
num-complex = "0.3.1"
