[package]
name = "rc"
version = "0.2.0"
authors = ["kondou nobuhiro <kondou.nobuhiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
crossterm = "0.25.0"
dirs = "4.0"
thiserror = "1.0"
# anyhow = "1.0.36"
num-complex = "0.4"

[dev-dependencies]
assert_cmd = "1"
